--- a/new.css
+++ b/new.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@700&family=Gloria+Hallelujah&family=Rye&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cabin+Sketch:wght@700&family=Cormorant&family=DM+Serif+Display&family=Gloria+Hallelujah&family=Rye&family=Satisfy&display=swap');
 
 
 html{
@@ -32,8 +32,34 @@ ul .row .col{
 }
 nav .nav-li{
   line-height: 15px;
+}
+
+nav ul .active{
+  background-color: #e3b505;
   
 }
+
+nav ul .active p,
+nav ul .active i{
+  color: rgb(250, 86, 86);
+}
+
+nav li a,
+nav li a p{
+  transition: background-color 0.8s, color 0.8s;
+}
+
+nav li a:hover{
+  background-color: #e3b505;
+
+}
+
+nav li a:hover p,
+nav li a:hover i{
+  color: rgb(250, 86, 86);
+}
+
+
 li p.flow-text{
   color: #e3b505;
   font-size: 19px;
@@ -116,22 +142,13 @@ ul li.sidenav-li a p.flow-text{
   width: 100%;
   overflow: hidden;
   margin-top: -90px;
+  background-size: cover;
+  background-image: url("Image/bg_final.svg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+
 }
 
-
-
-
-/* .hero-section::before{
-  content: "";
-  background-size: cover;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  opacity: 0.75;
-  z-index: -1;
-} */
 
 .main-logo{
   position: relative;
@@ -172,6 +189,7 @@ ul li.sidenav-li a p.flow-text{
   transition: 0.5s;
   opacity: 0;
   font-size: 35px;
+  
 }
 
 .btn:hover{
@@ -225,6 +243,7 @@ ul li.sidenav-li a p.flow-text{
   background-color: #F4EDAE;
   width: 100%;
   height: 550px;
+  overflow: hidden;
 }
 
 .slider .slides{
@@ -233,6 +252,16 @@ ul li.sidenav-li a p.flow-text{
   box-shadow: -7px 43px 22px -17px rgb(248, 243, 234);
   -webkit-box-shadow: -7px 43px 22px -17px rgb(160, 155, 148);
   -moz-box-shadow: -7px 43px 22px -17px rgb(247, 210, 155);
+}
+
+.caption h3{
+  font-family: 'Bebas Neue', sans-serif;
+  color: #fcfca8;
+}
+
+.caption h5{
+  font-family: 'Satisfy', cursive;
+  color: #fcfca8;
 }
 
 /* arrow-up floating btn */
@@ -246,15 +275,13 @@ ul li.sidenav-li a p.flow-text{
 
 
 /* About section area */
-
-
-
 .about-section{
   position: relative;
   width: 100%;
   height: 100vh;
   background-color: #F4EDAE;
   z-index: 1;
+  overflow: hidden;
 }
 
 .about-text{
@@ -286,15 +313,16 @@ ul li.sidenav-li a p.flow-text{
 
 .iced-coffee{
   position: absolute;
-  bottom: 0;
-  right: 0;
   overflow: hidden;
+  bottom: 40px;
+  right: -80px;
   z-index: -1;
 }
 
 .beans{
   position: absolute;
-  bottom: 0;
+  bottom:150px;
+  left: -80px;
   z-index: -1;
 }
 
@@ -303,6 +331,10 @@ ul li.sidenav-li a p.flow-text{
 #about-us .card-panel{
   background-color: transparent;
   z-index: 1;
+}
+
+.collapsible-body{
+  background-color: rgba(244, 237, 174, 0.8);
 }
 
 .collapsible-body p{
@@ -345,6 +377,7 @@ ul li.sidenav-li a p.flow-text{
   width: 100%;
   height: 100vh;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 
@@ -501,7 +534,20 @@ ul li.sidenav-li a p.flow-text{
   height: 344px !important;
 }
 
+.card-title{
+  font-family: 'Bebas Neue', sans-serif;
+  color: #fffdfc;
+  letter-spacing: 2px;
+}
+.card-title .prices{
+  display: block;
+  font-size: 19px !important;
+}
 
+
+
+
+/* Contact us area */
 
 #contact-us{
   box-sizing: border-box;
@@ -513,6 +559,13 @@ ul li.sidenav-li a p.flow-text{
   padding: 0;
   overflow: hidden;
 }
+.contact-h1{
+  font-weight: 400;
+  color: #4B4847;
+  font-family: 'Bebas Neue', sans-serif;
+  letter-spacing: 5px;
+
+}
 
 #contact-us .row .img-area{
   box-sizing: border-box;
@@ -522,15 +575,16 @@ ul li.sidenav-li a p.flow-text{
   right: 0;
   bottom: 0;
   top: 0;
+
 }
 #contact-us .row .col img{
+  position: absolute;
+  right: 0;
   padding: 0;
   margin: 0;
   height: 1024px;
+  z-index: 0;
 }
-
-
-
 
 .soc-area .card-panel{
   width: 225px;
@@ -539,6 +593,7 @@ ul li.sidenav-li a p.flow-text{
   background-color: #F4EDAE;
   text-align: center;
   margin-bottom: 40px;
+
 }
 
 .soc-area .card-panel a p{
@@ -553,6 +608,7 @@ ul li.sidenav-li a p.flow-text{
   color: rgb(106, 106, 247);
 }
 
+/* footer page area */
 .page-footer{
   background-color: #C2B78D;
 }
@@ -563,21 +619,36 @@ ul li.sidenav-li a p.flow-text{
   color: #000000;
 }
 
+.link-content {
+  text-align: center;
+}
 
 .links{
   display: flex;
-  margin-left: -100px;
+  margin: 0 auto;
+  
+  /* margin-left: -100px; */
 }
 
-.soc-links li,
-.links li {
+.links a span{
+  display: block;
+  width: 60px;
+}
+
+.soc-links li{
   padding: 0 20px;
+}
+
+.links li{
+  padding:0 30px 0 0;
+  margin-top: 30px;
 }
 
 .soc-links{
   display: flex;
   margin-top: 40px;
-  margin-left:-30px ;
+  margin-bottom: 50px;
+  justify-content: center;
 }
 
 .soc-links li a i{
@@ -594,28 +665,35 @@ ul li.sidenav-li a p.flow-text{
 
 @media only screen and (max-width: 600px){
 
-  .page-footer img{
-    margin-left: 69px;
+  /* footer page */
+  .reach-h5{
+    margin-left: 30px;
   }
 
-  .links{
-    display: flex;
-    margin-left: 10px;
+  /* .reach-us li {
+    margin: 30px 0;
   }
+
+  .page-footer img{
+    margin-left: 101px;
+  } */
+
+  /* .links{
+    display: flex;
+    margin-left: 48px;
+  } */
 
   .links li{
-    padding: 0 10px;
+    padding-right:0 10px 0 0;
   }
 
-  .soc-links{
+  /* .soc-links{
     margin-top: 10px;
-    margin-left:45px ;
-  }
+    margin-left:77px ;
+  } */
 
 
-
-
-
+  /* Contact area page */
 
 
 
@@ -630,11 +708,12 @@ ul li.sidenav-li a p.flow-text{
   #contact-us .row .col img{
     width: 100%;
     height: 443px;
+    opacity: 0.4;
   }
 
   #contact-us .row .img-area{
     position: absolute;
-    height: 443px;
+    height: 390px;
     bottom: 0;
     top: auto;
   }
@@ -664,7 +743,7 @@ ul li.sidenav-li a p.flow-text{
     font-size: 30px;
     color: rgb(106, 106, 247);
   }
-}
+
 
 @media only screen and (max-width: 400px){
   #contact-us .row .col img{
